--- a/src/components/LandingPage/Newsletter/FAQ/FAQ2.css
+++ b/src/components/LandingPage/Newsletter/FAQ/FAQ2.css
@@ -7,21 +7,24 @@ body {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap; 
+    padding-bottom: 30vh;
 }
 .heading{
     font-family: "Gilroy-bold";
-    font-size: 52px;
+    font-size: 46px;
     letter-spacing: -1px;
 }
 .heading2{
+    margin-top: -8vh;
     font-family: "Gilroy-bold";
-    font-size: 52px;
+    font-size: 46px;
 }
 .left-side {
     flex: 1;
     min-width: 300px; 
     max-width: 600px;
-    padding: 1px;
+    padding: 0;
+    padding-left: 1.5vh;
     box-sizing: border-box;
 }
 
@@ -35,7 +38,7 @@ body {
 
 .below-left-main {
     font-family: 'Montserrat-med';
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
 }
 
@@ -43,14 +46,35 @@ body {
     flex: 2;
     min-width: 300px; 
     max-width: 800px; 
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
     font-family: 'Gilroy-SemiBold';
-    font-weight: 400;
+    font-weight: 800;
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.bottom-text{
+    font-weight:500 ;
+    font-family: "Montserrat-med";
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    margin-bottom: 5vh;
+}
+
+.b-bottom{
+    background-color: #2176F6;
+    border-radius: 200px;
+    padding: 2vh 1vh;
+    margin-top:1vh;
+    margin-bottom: 8vh;
+    scroll-behavior: smooth;
+} 
+
+.b-bottom:hover{
+    background-color:#37B6FF ;
+}
 @media (max-width: 768px) {
     .faq-container {
         flex-direction: column;
