--- a/src/components/LandingPage/Newsletter/logo-slider/logo.css
+++ b/src/components/LandingPage/Newsletter/logo-slider/logo.css
@@ -14,6 +14,8 @@ body {
 .top-left {
   margin-bottom: 1vh;
   font-weight: 700;
+  margin-top: 7vh;
+  font-size: 14px;
   /* text-align: center; */
   margin-left: 40%;
   padding:2vh 2vh;
