--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -65,7 +65,7 @@ line-height: 16px;
   font-size: 18px;
   color: black;
   text-decoration: none;
-  font-family: Montserrat;
+  font-family: "Montserrat-med";
 font-style: normal;
 font-weight: 600;
 line-height: 16px;
@@ -96,7 +96,7 @@ line-height: 16px;
     margin-bottom: 10px; 
   font-family: "Montserrat-med";
   font-weight: 600;
-  font-family: Montserrat;
+  font-family: "Montserrat-med";
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
