--- a/src/components/LandingPage/Newsletter/contactUs/contact.css
+++ b/src/components/LandingPage/Newsletter/contactUs/contact.css
@@ -12,6 +12,12 @@
 .top-heading1 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 10vh;
+    font-family: "Gilroy-bold";
+}
+.top-heading-below1{
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .blue-email1 {
@@ -102,11 +108,7 @@
 .form-on-right1 button:hover {
     background: #0056b3;
 }
-.radio-buttons1{
-    align-items: start;
-    display: inline;
-    margin-top: 5px;
-}
+
 @media (max-width: 600px) {
     .contact-us-container1 {
         flex-direction: column;
@@ -119,21 +121,13 @@
     .form-on-right1 {
         width: 100%;
     }
+    
+    .top-heading-below1{
+        font-size: 2.5vh;
+    }
+    .top-heading1{
+        font-size: 6vh;
+        font-weight: 700;
+    }
 }
 
-.radio-buttons1 {
-    display: flex;
-    flex-direction: column;
-}
-
-.radio-buttons1 div {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.radio-label {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-}
