--- a/src/components/LandingPage/Newsletter/logo-slider/logo.css
+++ b/src/components/LandingPage/Newsletter/logo-slider/logo.css
@@ -64,7 +64,7 @@ body {
     width: 150px; /* Adjusted width for smallest screens */
   }
   .top-left{
-    margin-left: 8vh;
-    font-size: 2vh;
+    align-items: center;
+    text-align: center;
   }
 }
