--- a/src/components/LandingPage/Newsletter/contactUs/contact.css
+++ b/src/components/LandingPage/Newsletter/contactUs/contact.css
@@ -47,7 +47,7 @@
     flex-direction: row;
     align-items: start;
     justify-content: left;
-    gap: 50px;
+    gap: 15vw;
 }
 
 .img-on-left1 {
@@ -64,6 +64,7 @@
     max-width: 600px;
     height: 20vh;
     flex: 1;
+    margin-top: 5vh;
 }
 
 .form-on-right1 label {
