--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 40px; /* Reduced padding */
+  padding: 20px;
   background-color: white;
 }
 
@@ -13,10 +13,6 @@
   justify-content: center;
 }
 
-.video-tag {
-  width: 100%;
-  height: auto;
-}
 
 .text-section {
   flex: 1;
@@ -87,11 +83,6 @@ line-height: 16px;
     width: 100%;
   }
 
-  .video-tag {
-    width: 100%;
-    height: auto;
-  }
-
   .para2 {
     margin-bottom: 10px; 
   font-family: "Montserrat-med";
@@ -112,15 +103,15 @@ line-height: 16px;
   .para .main-para {
     font-size: 16px;
     margin-bottom: 10px;
-    line-height: 1.4; /* Adjust line height */
+    line-height: 1.4; 
   }
 
   .subscribe-text {
     font-size: 16px;
     overflow: hidden;
     display: flex;
-    flex-direction: row; /* Ensures the text and arrow are in a row even on small screens */
-    justify-content: center; /* Centers the text and arrow */
+    flex-direction: row; 
+    justify-content: center;
   }
   .subscribe-section{
     overflow-y: hidden;
