--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -58,15 +58,16 @@
     margin-top: 1vh;
     font-family: "Montserrat-med";
 }
-
+.static{
+  display: none;
+}
 @media (min-width:0px) and (max-width:600px) {
     .wrapper {
-        display: none;
         flex-direction: column;
-        align-items: center;
+        align-items: top;
         justify-content: center;
-        align-items: center;
-        justify-content: center;
+        align-items: top;
+        justify-content: top;
         width: 100%;
         height: 90vh;
       }
@@ -82,11 +83,15 @@
         margin-top: 2vh;
       }
       .description {
+        display: none;
         flex-grow: 1;
         margin-left:18vh;
         padding-left: 20px;
         font-size: 2vh;
         font-family: "Montserrat-med"; 
+      }
+      .static{
+        display: flex;
       }
       .name {
         font-size: 2.5vh; 
