--- a/src/components/LandingPage/Newsletter/Hero/Hero.css
+++ b/src/components/LandingPage/Newsletter/Hero/Hero.css
@@ -63,3 +63,54 @@
     max-width: 80%;
     height: auto;
 }
+.b3{
+    display: none;
+}
+.for-mobile{
+    display: none;
+}
+@media (max-width:600px) {
+    .small-text{
+        display: none;
+    }
+    .left-side{
+        display: none;
+    }
+    .hero-container{
+        flex-direction: column;
+    }
+    .right-side{
+        justify-content: center;
+        margin-left: 2vh;
+        align-items: center;
+        padding-top: 20vh;
+        max-width: 2000px;
+        font-size: 8vh;
+        flex-direction: column;
+    }
+    .right-side p{
+        justify-content: center;
+        overflow-y: hidden;
+        padding-bottom: 20vh;
+    }
+    .for-mobile{
+        display: flex;
+    }
+    .b3 {
+        display: flex;
+        gap: 1rem;
+    }
+    
+    .b3 {
+        padding: 0.75rem 1.5rem;
+        border: none;
+        cursor: pointer;
+        font-size: 1rem;
+        border-radius: 200px;
+    }
+    
+    .b3 {
+        background-color: #4285f4;
+        color: white;
+    }
+}
