--- a/src/components/LandingPage/Newsletter/Hero/Hero.css
+++ b/src/components/LandingPage/Newsletter/Hero/Hero.css
@@ -15,8 +15,11 @@
     margin-bottom: 30vh;
 }
 
+.left-button911 {
+    display: none;
+}
+
 .heading9 {
-    
     line-height: 1.2;
     font-size: 5vh;
     font-weight: bold;
@@ -68,6 +71,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    flex-direction: column;
 }
 
 .right9-side img {
@@ -75,51 +79,25 @@
     height: auto;
 }
 
-.b39 {
-    display: none;
-}
-
-.for-mobile9 {
-    display: none;
-}
-
 @media (max-width: 600px) {
-    .small-text9 {
-        display: none;
-    }
     .left9-side {
         display: none;
     }
-    .hero9-container {
-        flex-direction: column;
-        align-items: center;
+    .new p{
+        font-size: 3.5vh;
     }
-    .right9-side {
-        justify-content: center;
-        margin-left: 2vh;
-        align-items: center;
-        padding-top: 20vh;
-        max-width: 2000px;
-        font-size: 8vh;
-        flex-direction: column;
+    .right9-side{
+        margin-bottom: 30vh;
     }
-    .right9-side p {
-        justify-content: center;
-        overflow-y: hidden;
-        padding-bottom: 20vh;
-    }
-    .for-mobile9 {
-        display: flex;
-    }
-    .b39 {
-        display: flex;
-        gap: 1rem;
+    .left-button911 {
+        display: block;
+        background-color: #4285f4;
+        color: white;
         padding: 0.75rem 1.5rem;
         border: none;
         cursor: pointer;
         font-size: 1rem;
         border-radius: 200px;
-        background-color: #4285f4;
-        color: white;
+        margin-top: 2rem;
     }
 }
