--- a/src/components/LandingPage/Newsletter/Navbar/Navbar1.css
+++ b/src/components/LandingPage/Newsletter/Navbar/Navbar1.css
@@ -20,13 +20,14 @@ padding: 1.3vh 1.5vh;
     .header-container {
         flex-direction: column;
         align-items: center;
+
     }
     
     .logo {
         margin-left: 0;
         }
     
-    .button {
+    .button5 {
         display: none;
     }
 }
