--- a/src/components/LandingPage/Newsletter/contactUs/contact.css
+++ b/src/components/LandingPage/Newsletter/contactUs/contact.css
@@ -94,8 +94,10 @@
 
 @media (max-width: 600px) {
     .contact-us-container11 {
+        max-width: 600px;
         flex-direction: column;
         font-size: smaller;
+        display: flex;
     }
 
     .img-on-left11 {
@@ -103,15 +105,27 @@
     }
 
     .form-on-right11 {
+        padding-left: 2vh;
+        padding-right: 2vh;
         width: 100%;
     }
 
     .top-heading-below11 {
-        font-size: 2.5vh;
+        font-size: 2.8vh;
     }
 
     .top-heading11 {
-        font-size: 6vh;
+        font-size: 5.2vh;
         font-weight: 700;
+    }
+    .heading11-1{
+        font-size: 3vh;
+        margin-top: -1vh;
+        padding-bottom: 2vh;
+    }
+    .blue-email11{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 }
