--- a/src/components/LandingPage/Newsletter/explore/explore.css
+++ b/src/components/LandingPage/Newsletter/explore/explore.css
@@ -51,4 +51,12 @@
     .for_img{
         max-width: 400px;
     }
+    .heading5 h2{
+        font-size: 5vh;
+    }
+    .text p{
+        padding-top: 2vh;
+        font-size: 2.5vh;
+    }
+   
 }
