--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -70,6 +70,7 @@
         justify-content: top;
         width: 100%;
         height: 90vh;
+        display: none;
       }
       
       .outer {
