--- a/src/components/LandingPage/Newsletter/explore/explore.css
+++ b/src/components/LandingPage/Newsletter/explore/explore.css
@@ -17,7 +17,8 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    font-size: 6vh;
+    font-size: 4.5vh;
+    font-weight: 800;
     font-weight: bold;
 }
 
@@ -34,7 +35,7 @@
     color: white;
     border: none;
     align-items: center; 
-    padding: 12px 12px;
+    padding: 14px 14px;
     font-weight: 600;
     cursor: pointer;
     font-size: 2.5vh;
@@ -44,7 +45,7 @@
 
 }
 .button3:hover{
-    background-color: cadetblue;
+    background-color: #0056b3;
 }
 
 @media (max-width:600px) {
