--- a/src/components/LandingPage/Newsletter/Hero/Hero.css
+++ b/src/components/LandingPage/Newsletter/Hero/Hero.css
@@ -35,12 +35,15 @@
 }
 
 .small-text9 {
+    padding-top: 2vh;
+    font-family: "Montserrat-med";
     font-size: 1rem;
     color: #6c757d;
     margin-bottom: 2rem;
 }
 
 .for-buttons9 {
+    font-family: "Gilroy-semibold";
     display: flex;
     gap: 1rem;
 }
