--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -62,74 +62,38 @@
   display: none;
 }
 @media (min-width:0px) and (max-width:600px) {
-    .wrapper {
-        flex-direction: column;
-        align-items: top;
-        justify-content: center;
-        align-items: top;
-        justify-content: top;
-        width: 100%;
-        height: 90vh;
-        display: none;
-      }
-      
-      .outer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        gap:15vh;
-        padding-right: 25vh;
-        width: 100%;
-        margin-top: 2vh;
-      }
-      .description {
-        display: none;
-        flex-grow: 1;
-        margin-left:18vh;
-        padding-left: 20px;
-        font-size: 2vh;
-        font-family: "Montserrat-med"; 
-      }
-      .static{
-        display: flex;
-      }
-      .name {
-        font-size: 2.5vh; 
-        color: #aaa;
-        font-family: "Manrope";
-        transition: color 1s, font-size 1s;
-        margin-right: 40px;
-        font-weight: 600;
-        
-      }
-      
-      .name.active {
-        color: #000;
-        font-size: 3.1vh; 
-        font-family: "Manrope";
-        font-weight: 900;
-
-      }
-      .heading_help{
-        display: none;
-      }
-      .description {
-        flex-grow: 1;
-        padding-left: 5vh; /* Remove padding-left for centering */
-        margin-left: 18vh; /* Remove margin-left for centering */
-        font-size: 16px; /* Adjust font size as needed */
-        font-family: "Montserrat-med";
-        line-height: 1.3; /* Adjust line height for better readability */
-        text-align: center; /* Center the text */
-        margin-bottom: 2vh; /* Add margin-bottom if needed for spacing */
-    }
-    
-      .heading_help{
-        font-size: 14px;
-        margin-left: 15.5vh;
-        font-weight: 600;
-        margin-top: 3.3vh;
-        font-family: "Montserrat-med";
-    }
+  .wrapper {
+      flex-direction: column;
+      margin-top: 1vh;
+      width: 100%;
+      height: 100vh;
+  }
+  .titles {
+      font-size: 2vh;
+  }
+  .outer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-right: 25vh;
+      width: 100%;
+      margin-top: 2vh;
+  }
+  .description {
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      font-size: 3vh;
+      font-family: "Montserrat-med"; 
+      padding-bottom: 2vh;
+      margin-left: 30%;
+  }
+  .heading_help {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 3.5vh;
+  }
 }
