--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -59,9 +59,10 @@
 
 @media (max-width: 600px) {
   .wrapper {
+    display: flex;
     flex-direction: column;
     margin-top: 1vh;
-    height: 120vh;
+    height: 110vh;
   }
 
   .outer {
@@ -75,15 +76,17 @@
   .titles {
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin-left: 0;
     padding-left: 0;
   }
 
   .description {
+    align-items: center;
+    justify-content: center;
     text-align: center;
     font-size: 2.5vh;
     display: flex;
-    justify-content: center;
     padding-bottom: 2vh;
   }
 
