--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,11 +8,25 @@
   margin-top: 30px;
   height: 70vh;
 }
-#line-homepage{
+
+#line-homepage {
   margin-top: -20vh;
-  /* margin-left: 10vh; */
-  width: 100%;
+  bottom: 15%;
+  display: flex;
+  width: 100%; 
+  position: absolute;
+  overflow-x: hidden; 
 }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+
 .main-heading {
   font-family: "Gilroy-semibold"; 
   font-weight: 900;
