--- a/src/components/LandingPage/section2/section2.css
+++ b/src/components/LandingPage/section2/section2.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 20px;
+  padding: 2%;
+  padding-bottom: 1px;
   background-color: white;
 }
 
@@ -19,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 20px;
+  padding-bottom: 1px;
 }
 
 .para2 {  
