--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -1,3 +1,4 @@
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -12,12 +13,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 30vh;
+  gap:30vh;
   padding-right: 10vh;
   width: 100%;
 }
 
 .titles {
+
   display: flex;
   align-items: center;
   margin-left: 20vh;
@@ -33,6 +35,7 @@
   transition: color 1s, font-size 1s;
   margin-right: 20px;
   font-weight: 600;
+  
 }
 
 .name.active {
@@ -48,51 +51,85 @@
   font-size: 2.5vh;
   font-family: "Montserrat-med"; 
 }
-
-.heading_help {
-  font-size: 12px;
-  margin-left: 3.5vh;
-  font-weight: 600;
-  margin-top: 1vh;
-  font-family: "Montserrat-med";
-}
-
-@media (max-width: 600px) {
-  .wrapper {
-    display: flex;
-    flex-direction: column;
+.heading_help{
+    font-size: 12px;
+    margin-left: 3.5vh;
+    font-weight: 600;
     margin-top: 1vh;
-    height: 100vh;
-  }
+    font-family: "Montserrat-med";
+}
+.static{
+  display: none;
+}
+@media (min-width:0px) and (max-width:600px) {
+    .wrapper {
+        flex-direction: column;
+        align-items: top;
+        justify-content: center;
+        align-items: top;
+        justify-content: top;
+        width: 100%;
+        height: 90vh;
+        display: none;
+      }
+      
+      .outer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap:15vh;
+        padding-right: 25vh;
+        width: 100%;
+        margin-top: 2vh;
+      }
+      .description {
+        display: none;
+        flex-grow: 1;
+        margin-left:18vh;
+        padding-left: 20px;
+        font-size: 2vh;
+        font-family: "Montserrat-med"; 
+      }
+      .static{
+        display: flex;
+      }
+      .name {
+        font-size: 2.5vh; 
+        color: #aaa;
+        font-family: "Manrope";
+        transition: color 1s, font-size 1s;
+        margin-right: 40px;
+        font-weight: 600;
+        
+      }
+      
+      .name.active {
+        color: #000;
+        font-size: 3.1vh; 
+        font-family: "Manrope";
+        font-weight: 900;
 
-  .outer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin-top: 2vh;
-  }
-
-  .titles {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-left: 0;
-    padding-left: 0;
-  }
-
-  .description {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 2.5vh;
-    display: flex;
-    padding-bottom: 2vh;
-  }
-
-  .heading_help {
-    text-align: center;
-    font-size: 2vh;
-    margin-left: 0;
-  }
+      }
+      .heading_help{
+        display: none;
+      }
+      .description {
+        flex-grow: 1;
+        padding-left: 5vh; /* Remove padding-left for centering */
+        margin-left: 18vh; /* Remove margin-left for centering */
+        font-size: 16px; /* Adjust font size as needed */
+        font-family: "Montserrat-med";
+        line-height: 1.3; /* Adjust line height for better readability */
+        text-align: center; /* Center the text */
+        margin-bottom: 2vh; /* Add margin-bottom if needed for spacing */
+    }
+    
+      .heading_help{
+        font-size: 14px;
+        margin-left: 15.5vh;
+        font-weight: 600;
+        margin-top: 3.3vh;
+        font-family: "Montserrat-med";
+    }
 }
