--- a/src/components/LoginNewsletter/LoginNewsletter.css
+++ b/src/components/LoginNewsletter/LoginNewsletter.css
@@ -19,6 +19,7 @@
 .form-container {
   width: 100%;
   max-width: 500px;
+  /* height: 800vh; */
 }
 
 .form-group {
@@ -61,6 +62,7 @@ button[type="submit"]:hover {
 
 .right-side img {
   max-width: 100%;
+  height: auto; /* Ensure height is auto */
   margin-top: -5vh;
   height: 70vh;
 }
@@ -71,9 +73,6 @@ button[type="submit"]:hover {
     width: 100%;
   }
   .nav {
-    display: none;
-  }
-  .right-side {
     display: none;
   }
   .right-side {
