--- a/src/components/LandingPage/Newsletter/Hero/Hero.css
+++ b/src/components/LandingPage/Newsletter/Hero/Hero.css
@@ -103,15 +103,22 @@
     font-size: 4vh;
     }
     .right9-side{
-        margin-top: -20vh;
-        height: 50vh;
+        flex: 1;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 0;
+        margin-top: 0vh;
+        height: 80vh;
         overflow-y: hidden;
+    }
+    .news-img{
+        margin-top: 3vh;
     }
     .left-button911 {
         display: block;
         background-color: #4285f4;
         color: white;
-        padding: 0.75rem 1.5rem;
+        padding: 0.75rem 1.0rem;
         border: none;
         cursor: pointer;
         font-size: 1rem;
